# publications-implementation

./: .gitignore  README.md
Nonequilibrium hyperuniform states in active turbulence/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Nonequilibrium hyperuniform states in active turbulence/.agent/workflows/: sync-docs.md
Nonequilibrium hyperuniform states in active turbulence/config/matplotlib/: convergence.mplstyle  doc.mplstyle  fields.mplstyle  main.mplstyle  scatter.mplstyle  snapshots.mplstyle
Nonequilibrium hyperuniform states in active turbulence/docs/: theoretical_background.md
Nonequilibrium hyperuniform states in active turbulence/docs/capsules/: extrema_search.md  framework.md  hyperuniformity_analysis.md  simulation.md  steady_state_analysis.md
Nonequilibrium hyperuniform states in active turbulence/notebooks/: Extrema Search playground.ipynb  Hyperuniformity Analysis playground.ipynb  Plotting playground.ipynb  Simulation playground.ipynb  Steady State Analysis playground.ipynb
Nonequilibrium hyperuniform states in active turbulence/parameters/: extrema_search.yml  hyperuniformity_analysis.yml  simulation.yml  steady_state_analysis.yml
Nonequilibrium hyperuniform states in active turbulence/src/: all_workflow.py  analysis_workflow.py
Nonequilibrium hyperuniform states in active turbulence/src/active_flow/: analysis_workflow.py
Nonequilibrium hyperuniform states in active turbulence/src/extrema_search/: algorithm_tasks.py  postprocessing.py  (+2 more)
Nonequilibrium hyperuniform states in active turbulence/tests/: conftest.py
(+677 files in other folders)
